# crossposter

./: .gitignore  CLAUDE.md  LICENSE  README.md  config.env.example  config.json.example  config.toml.example  crosspost.py  pyproject.toml  requirements.txt
man/: crosspost.1
src/crosspost/: __init__.py  cli.py  config.py  poster.py
